# stdex

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: stdexConfig.cmake.in
docs/: StdexIndex.md
include/: as_const.h  conjunction.h  cpp_lib_constexpr.h  in_place_type_t.h  invoke.h  is_invocable.h  make_type.h  stdex_package.h  void_t.h
include/stdex/: any.hpp  as_const.hpp  conjunction.hpp  cpp_lib_constexpr.hpp  disjunction.h  disjunction.hpp  in_place_t.h  in_place_t.hpp  in_place_type_t.hpp  invoke_result.h  invoke_result.hpp  is_invocable.hpp  is_nothrow_invocable.h  is_nothrow_invocable.hpp  is_nothrow_swappable.h  is_nothrow_swappable.hpp  negation.h  negation.hpp  null_deleter.hpp  observer_ptr.hpp  optional.h  optional.hpp  static_constexpr.h  static_constexpr.hpp  stdex_config.h  stdex_package.hpp  string_view.h  variant.h  variant.hpp  void_t.hpp
include/stdex/testing/: resettable_ostringstream.hpp
include/stdex/testing/printing/typeindex/: std_type_index_boost_test_outputters.hpp  std_type_index_testing_outputters.hpp
tests/: CMakeLists.txt  functional.cpp  static_constexpr_testsuite.cpp  stdex_boost_test_suite_main.cpp  stdex_functional_boost_testsuite.cpp  stdex_static_constexpr_boost_testsuite.cpp  stdex_static_logicals_boost_testsuite.cpp  stdex_type_traits_boost_testsuite.cpp
tests/dataset/: static_constexpr_dataset_testsuite.cpp  static_constexpr_dataset_testsuite.h
tests/helpers/: testing_ostream.h
tests/libs/: stdex_any_boost_testsuite.cpp  stdex_functional_boost_testsuite.cpp  stdex_nonstandard_boost_testsuite.cpp  stdex_type_traits_boost_testsuite.cpp  stdex_utility_boost_testsuite.cpp
tests/libs/dataset/: static_constexpr_dataset_testsuite.cpp  static_constexpr_dataset_testsuite.h
